--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "idb": "^7.1.1",
     "regenerator-runtime": "^0.13.11",
+    "sweetalert2": "^11.6.15",
     "workbox-window": "^6.5.4"
   }
 }
